--- a/styles/reset.css
+++ b/styles/reset.css
@@ -23,6 +23,8 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 	box-sizing: border-box;
+	font-family: Arial, Helvetica, sans-serif;
+	line-height: 1.5em;
 }
 html:focus-within {
 	scroll-behavior: smooth;
